client read finished

--- a/Challenge5_LoadBalancer/NonBlocking_LoadBalancer/Makefile
+++ b/Challenge5_LoadBalancer/NonBlocking_LoadBalancer/Makefile
@@ -1,12 +1,41 @@
-all: output
-# make sure the make file can be automated to accomodate all files
-output: main.o HTTPObject.o
-	g++ -g -o output main.o HTTPObject.o
+# Compiler
+CXX = g++
 
-HTTPObject.o: HTTPObject.cpp HTTPObject.h
-	g++ -c -o HTTPObject.o HTTPObject.cpp
+# Compiler flags
+CXXFLAGS = -Wall -Wextra -std=c++11 -g
 
-main.o: main.cpp
-	g++ -c -o main.o ./main.cpp
+# Directories
+INCLUDE_DIR = include
+SRC_DIR = src
+
+# Source files
+SRCS = $(SRC_DIR)/HTTPObject.cpp $(SRC_DIR)/Server.cpp $(SRC_DIR)/Connection.cpp $(SRC_DIR)/utils.cpp main.cpp 
+
+# Object files
+OBJS = $(SRCS:.cpp=.o)
+
+# Executable name
+EXEC = output
+
+# Default target
+all: $(EXEC)
+
+# Link the executable
+$(EXEC): $(OBJS)
+	$(CXX) $(CXXFLAGS) -o $@ $^
+
+# Compile source files into object files
+$(SRC_DIR)/%.o: $(SRC_DIR)/%.cpp $(INCLUDE_DIR)/%.h
+	$(CXX) $(CXXFLAGS) -I$(INCLUDE_DIR) -c $< -o $@
+
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -I$(INCLUDE_DIR) -c $< -o $@
+
+# Clean up build files
+clean:
+	rm -f $(OBJS) $(EXEC)
+
+# Phony targets
+.PHONY: all clean
 
 
